Fix ClassCastException and improve batch highlighting implementation
- Replace getFirst() with get(0) for Java 11 compatibility
- Add logging to trace batch highlighting flow
- Fix MLCommonsClientAccessor batch inference implementation
- Update build.gradle to test with custom OpenSearch distribution

This commit fixes the ClassCastException that occurred when trying to use
getFirst() method which is only available in Java 21+. The batch semantic
highlighting architecture is now fully functional.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>